# alphasense_description

./: CMakeLists.txt  README.md
launch/: load.launch  view_urdf.launch
src/: kalibr_urdf_calibration_converter.cpp
urdf/: alphasense.urdf.xacro  alphasense_camera_module.urdf.xacro  alphasense_standalone.urdf  alphasense_standalone.urdf.xacro  gazebo.xacro
urdf/meshes/: alphasense_camera_module.dae
